# KonoAsset

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING-en.md  CONTRIBUTING.md  LICENSE  LICENSE (icon)  README.md  a.json  changelog.json  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  regconfig.json  renovate.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.workspace.ts
.husky/: pre-commit  pre-push
src-backend/: .gitignore  Cargo.toml
src-backend/crates/booth/: Cargo.toml
src-backend/crates/booth/src/: booth.rs  cache.rs  client.rs  common.rs  definitions.rs  error.rs  lib.rs  pximg.rs
src-backend/crates/booth/test/: 6641548.json
src-backend/crates/changelog/: Cargo.toml
src-backend/crates/changelog/src/: definitions.rs  lang.rs  lib.rs  parser.rs
src-backend/crates/data-store/: Cargo.toml
src-backend/crates/data-store/src/: delete.rs  json_store.rs  lib.rs  provider.rs  search.rs
src-backend/crates/file/: Cargo.toml
src-backend/crates/file/src/: error.rs  image_util.rs  lib.rs  modify_guard.rs  open.rs
src-backend/crates/language/: Cargo.toml
src-backend/crates/language/src/: lib.rs  structs.rs
src-backend/crates/loader/: Cargo.toml
src-backend/crates/loader/src/: adapters.rs  avatar.rs  avatar_wearables.rs  lib.rs  other_assets.rs  preferences.rs  share.rs  traits.rs  world_objects.rs  wrapper.rs
src-backend/crates/logging/: Cargo.toml
src-backend/crates/logging/src/: definitions.rs  lib.rs  worker.rs
src-backend/crates/model/: Cargo.toml
src-backend/crates/model/src/: asset_trait.rs  base.rs  lib.rs  preference.rs  summary.rs  ui.rs  utils.rs
src-backend/crates/state/: Cargo.toml
src-backend/crates/state/src/: definitions.rs  handler.rs  lib.rs
src-backend/crates/storage/: Cargo.toml
src-backend/crates/storage/src/: asset_storage.rs  definitions.rs  delete.rs  find.rs  json_asset_container.rs  lib.rs  search.rs  utils.rs
src-backend/crates/storage/src/search/: definitions.rs  logic.rs  mod.rs
src-backend/crates/task/: Cargo.toml
src-backend/crates/task/src/: cancellable_task.rs  commands.rs  lib.rs
src-backend/crates/zip/: Cargo.toml
src-backend/crates/zip/src/: extractor.rs  lib.rs
src-backend/tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-backend/tauri/src/: lib.rs  main.rs
src-backend/tauri/src/adapter/exporter/: definitions.rs  human_readable_zip_exporter.rs  konoasset_exporter.rs  mod.rs  util.rs
src-backend/tauri/src/adapter/importer/: directory.rs  mod.rs  zip.rs
src-backend/tauri/src/command/: mod.rs
src-backend/tauri/src/command/asset/: adapter.rs  create.rs  delete.rs  filter.rs  get.rs  mod.rs  statistics.rs  status.rs  update.rs
src-backend/tauri/src/command/deep_link/: execute.rs
src-backend/tauri/src/command/file/: common.rs  delete.rs  image.rs  import.rs  list.rs  mod.rs  open.rs
src-backend/tauri/src/command/language/: common.rs
src-backend/tauri/src/command/preference/: common.rs  logging.rs  reset.rs
src-backend/tauri/src/command/state/: common.rs
src-backend/tauri/src/command/suggest/: get.rs
src-backend/tauri/src/data_store/: delete.rs  json_store.rs  provider.rs  search.rs
src-backend/tauri/src/deep_link/: definitions.rs  mod.rs  parser.rs
src-backend/tauri/src/definitions/: entities.rs  import_request.rs  mod.rs  results.rs
src-backend/tauri/src/importer/: fileutils.rs  import_wrapper.rs  mod.rs
src-backend/tauri/src/loader/: other_assets.rs  preferences.rs  traits.rs
src-backend/tauri/src/logging/: definitions.rs  worker.rs
src-backend/tauri/src/preference/: store.rs
src-backend/tauri/src/statistics/: registration.rs  volume.rs
src-backend/tauri/src/updater/: update_handler.rs
src-backend/tauri/src/zip/: extractor.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/src/: commands.rs  factory.rs  lib.rs  main.rs
src-tauri/src/adapter/: exporter.rs  importer.rs
src-tauri/src/adapter/exporter/: avatar_explorer_exporter.rs  definitions.rs  human_readable_zip_exporter.rs  konoasset_exporter.rs  mod.rs  util.rs
src-tauri/src/adapter/importer/: directory.rs  mod.rs  zip.rs
src-tauri/src/booth/: booth_fetcher.rs  cache.rs  common.rs  extractor.rs  fetcher.rs  image_resolver.rs  image_saver.rs  mod.rs
src-tauri/src/changelog/: common.rs  definitions.rs  mod.rs
src-tauri/src/command/: mod.rs
src-tauri/src/command/asset/: adapter.rs  create.rs  delete.rs  filter.rs  get.rs  mod.rs  statistics.rs  update.rs
src-tauri/src/command/file/: common.rs  delete.rs  import.rs  list.rs  mod.rs  open.rs
src-tauri/src/command/language/: common.rs
src-tauri/src/command/preference/: common.rs  logging.rs  mod.rs  reset.rs
src-tauri/src/command/suggest/: get.rs
src-tauri/src/command/task/: status.rs
src-tauri/src/command/update/: changelog.rs  common.rs  mod.rs
src-tauri/src/data_store/: basic_store.rs  delete.rs  find.rs  json_store.rs  mod.rs  provider.rs  search.rs  store.rs
src-tauri/src/deep_link/: definitions.rs  executer.rs  parser.rs
src-tauri/src/definitions/: entities.rs  import_request.rs  mod.rs  pre.rs  results.rs  traits.rs
src-tauri/src/fetcher/: booth_fetcher.rs  mod.rs
src-tauri/src/file/: cleanup.rs  list.rs  mod.rs  modify_guard.rs
src-tauri/src/file_opener/: mod.rs
src-tauri/src/files/: asset_importer.rs  mod.rs
src-tauri/src/importer/: fileutils.rs  import_wrapper.rs  mod.rs
src-tauri/src/language/: load.rs  structs.rs
src-tauri/src/loader/: avatar.rs  avatar_wearables.rs  mod.rs  other_assets.rs  preferences.rs  share.rs  world_objects.rs
src-tauri/src/logging/: definitions.rs  mod.rs  worker.rs
src-tauri/src/preference/: store.rs
src-tauri/src/statistics/: mod.rs  registration.rs  volume.rs  volume_cache.rs
src-tauri/src/task/: cancellable_task.rs  definitions.rs  mod.rs
src-tauri/src/updater/: update_handler.rs
src-tauri/src/zip/: extractor.rs
src-tauri/test/: example_changelog.json
src-tauri/test/example_root_dir/metadata/: avatars.json
(+770 files in other folders)
