[package]
name = "konoasset"
version = "0.1.11"
description = "Asset management tool for VRChat"
authors = ["siloneco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "konoasset_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
showfile = { version = "0.1.1" }
opener = { version = "0.7.2" }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
regex = "1.11.1"
kanaria = "0.2.0"
zip-extensions = "0.8.1"
specta = {version = "=2.0.0-rc.20", features = ["uuid"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
