[package]
name = "konoasset"
version = "1.0.0"
description = "Asset management tool for VRChat"
authors = ["siloneco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "konoasset_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["process", "macros"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4.22", features = ["std"] }
ringbuffer = "0.15.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
showfile = { version = "0.1.1" }
opener = { version = "0.7.2" }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
regex = "1.11.1"
monostate = "0.1.13"
kanaria = "0.2.0"
async_zip = { version = "0.0.17", features = ["full"] }
sanitize-filename = "0.6.0"
encoding_rs = "0.8.35"
specta = {version = "=2.0.0-rc.22", features = ["uuid", "chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
serde_with = "3.12.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
