[package]
name = "data-store"
version = "0.0.0"
repository.workspace = true
description = "Data storage library"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Local crates
model.workspace = true
file.workspace = true
loader.workspace = true

# External crates
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
log.workspace = true
specta.workspace = true
kanaria = "0.2.0"