[package]
name = "logging"
version = "0.0.0"
description = "Log initialization and management library"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
chrono.workspace = true
serde.workspace = true
specta.workspace = true
ringbuffer = "0.15.0"