[package]
name = "state"
version = "0.0.0"
repository.workspace = true
description = "App state management crate"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Local crates
model.workspace = true

# External crates
serde.workspace = true
serde_json.workspace = true
log.workspace = true
specta.workspace = true