[package]
name = "task"
version = "0.0.0"
repository.workspace = true
description = "Cancellable task implementations"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tauri.workspace = true
tauri-specta.workspace = true
specta.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
log.workspace = true